# gmail-mcp-server

./: .env.example  .gitignore  .replit  CLAUDE.md  LICENSE  README.md  pyproject.toml  replit.nix
.claude/: settings.json
gmail_mcp/: __init__.py  __main__.py  server.py
gmail_mcp/auth/: __init__.py  oauth.py  storage.py  tokens.py
gmail_mcp/gmail/: __init__.py  client.py  labels.py  messages.py  threads.py
gmail_mcp/hitl/: __init__.py  manager.py  models.py
gmail_mcp/middleware/: __init__.py  audit_logger.py  rate_limiter.py  validator.py
gmail_mcp/schemas/: __init__.py  tools.py
gmail_mcp/tools/: __init__.py  base.py
gmail_mcp/tools/auth/: __init__.py  login.py  logout.py  status.py
gmail_mcp/tools/read/: __init__.py  chat.py  download.py  draft.py  labels.py  search.py  summarize.py  triage.py
gmail_mcp/tools/write/: __init__.py  archive.py  delete.py  labels.py  send.py  unsubscribe.py
gmail_mcp/utils/: __init__.py  encryption.py  errors.py
tests/: conftest.py  test_encryption.py  test_gmail_client.py  test_gmail_messages.py  test_gmail_threads.py  test_hitl.py  test_integration.py  test_oauth_integration.py  test_server.py
tests/test_tools/: __init__.py  conftest.py  test_auth.py  test_base.py  test_read_tools.py  test_write_tools.py
